Scale data after dividing train and test

--- a/notebook/P59_Shape_Classification_ML_D2.ipynb
+++ b/notebook/P59_Shape_Classification_ML_D2.ipynb
@@ -20,8 +20,8 @@
     "### [1.Importing the libraries](#1.-Importing-the-libraries)\n",
     "### [2.Reading the datasets](#2.-Reading-the-datasets)\n",
     "### [3.Preprocessing the datasets](#3.-Preprocessing-the-datasets)\n",
-    "### [4.Scaling the data](#4.-Scaling-the-data)\n",
-    "### [5.Dividing train and test data](#5.-Dividing-train-and-test-data)\n",
+    "### [4.Dividing train and test data](#4.-Dividing-train-and-test-data)\n",
+    "### [5.Scaling the data](#5.-Scaling-the-data)\n",
     "### [6.Classification](#6.-Classification)\n",
     "### [7.Validation](#7.-Validation)\n",
     "### [8.Feature Selection](#8.-Feature-Selection)\n",
@@ -42,20 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "Yyc03UBFXHOp"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ibon/anaconda3/lib/python3.8/site-packages/tpot/builtins/__init__.py:36: UserWarning: Warning: optional dependency `torch` is not available. - skipping import of NN models.\n",
-      "  warnings.warn(\"Warning: optional dependency `torch` is not available. - skipping import of NN models.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reading data\n",
     "from os import listdir\n",
@@ -122,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "mDbAKrPMbZZA"
    },
@@ -157,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "zo31q5cwXHO3"
    },
@@ -178,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "b3Wt7DtuXHPG",
     "outputId": "d1b01efa-953d-4eac-8123-0c121df1f490"
@@ -210,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "id": "qP1TxbsgbZZZ"
    },
@@ -231,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "id": "scpmld80bZZe",
     "outputId": "d1b01efa-953d-4eac-8123-0c121df1f490",
@@ -271,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "id": "atXEc2AGXHPM"
    },
@@ -295,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "id": "kw3upVE-bZZp"
    },
@@ -316,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "id": "Ia9b5xpZbZZs"
    },
@@ -981,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "id": "ltL3_TyPbZar"
    },
@@ -992,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "id": "GCFP2TwqbZau",
     "outputId": "6c30e78e-fe64-441c-8a95-141286d54b33",
@@ -1147,7 +1138,7 @@
        "[210 rows x 4 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {
     "id": "uyMj5cYcbZa0",
     "outputId": "0001494b-415b-4c6a-caf2-cc0b4ea17b16",
@@ -1548,7 +1539,7 @@
        "[210 rows x 1784 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1573,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
     "id": "oDgpS6G-bZa6"
    },
@@ -1584,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {
     "id": "f_DVL0RmbZa-",
     "outputId": "b354642b-5b71-4ba6-e411-c7487eb5fbfd"
@@ -1934,7 +1925,7 @@
        "[210 rows x 1781 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {
     "id": "ywZ3PMnYbZbF",
     "outputId": "e0d89507-b4ea-47eb-8ecc-6f826cc17ba4"
@@ -1978,7 +1969,7 @@
        "Name: Class, Length: 210, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2016,7 +2007,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2036,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {
     "id": "8n2TIfL6bZaP",
     "outputId": "3c21b22e-fff9-4f88-bb7b-3f31e2c5d1c4"
@@ -2133,7 +2124,7 @@
        "[120 rows x 1 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2163,7 +2154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {
     "id": "ZmtRxkB6bZbj"
    },
@@ -2176,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {
     "id": "j5J00iFLbZbo",
     "outputId": "78f94b29-95ff-4891-8341-2e9d269ed291"
@@ -2201,7 +2192,7 @@
        "       4, 4, 4, 4, 4, 4, 4, 4, 4, 4])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2213,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {
     "id": "5QRpcut7bZbw",
     "outputId": "f6134754-3004-44c7-d6f4-430481d04008"
@@ -2240,7 +2231,7 @@
        "        9])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2261,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {
     "id": "cfmRhtcsbZb4",
     "outputId": "66649297-25bc-4f69-9b1b-7a2ec3f46ce0"
@@ -2390,7 +2381,7 @@
        "[120 rows x 3 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2421,7 +2412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {
     "id": "Lu3Eqh9PbZb9",
     "outputId": "0a750dd3-198b-4dfe-8408-28351155d214"
@@ -2464,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {
     "id": "zrUfyecibZcF"
    },
@@ -2475,7 +2466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {
     "id": "i3SPgA8TbZcO",
     "outputId": "5c003205-d684-4c2f-c11b-e93bddfec797",
@@ -2630,7 +2621,7 @@
        "[120 rows x 4 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2660,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {
     "id": "4LubVXWtbZcT",
     "outputId": "8c2504c6-fd46-4c81-9b39-6934df840e7e",
@@ -3031,7 +3022,7 @@
        "[120 rows x 548 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3056,7 +3047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {
     "id": "XBaKSYl1bZcY"
    },
@@ -3067,7 +3058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {
     "id": "YUwCx0H6bZcb",
     "outputId": "4f247eeb-8bbd-40a0-fcf0-5acf30d2e51b"
@@ -3417,7 +3408,7 @@
        "[120 rows x 545 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3438,7 +3429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {
     "id": "_chvFYwmbZcj",
     "outputId": "31d2ff76-a681-493d-83fe-092632f76ace",
@@ -3462,7 +3453,7 @@
        "Name: Class, Length: 120, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3474,111 +3465,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "2Vhx-ZimbZcn"
-   },
-   "source": [
-    "# 4. Scaling the data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "XCLx3gYrbZco"
-   },
-   "source": [
-    "## 4.1. Scaling the plane data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "id": "pXLMzowvbZcp",
-    "outputId": "89ab320a-c796-45ea-acbf-7f3846185180"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.76525741, -0.22082254, -0.30487452, ...,  0.01310947,\n",
-       "        -0.9060359 ,  0.02397567],\n",
-       "       [-0.14307215, -0.33949876, -2.22919207, ...,  0.63878863,\n",
-       "         0.51461948,  0.61316508],\n",
-       "       [ 0.13022418, -0.33949876, -0.62559411, ..., -0.36229803,\n",
-       "         0.58147385, -0.36881726],\n",
-       "       ...,\n",
-       "       [ 1.81070585, -0.7845346 ,  1.47912821, ..., -1.89968112,\n",
-       "         1.18316319, -1.88642634],\n",
-       "       [ 0.56052052, -0.04280821,  0.09602497, ...,  0.58515899,\n",
-       "         0.04663888,  0.59531085],\n",
-       "       [ 1.62463176, -0.69552743, -0.34496447, ..., -1.27400195,\n",
-       "         0.83217774, -1.27938271]])"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plane_scaler = StandardScaler()\n",
-    "plane_features_scaled = plane_scaler.fit_transform(plane_features)\n",
-    "plane_features_scaled"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ow5x3uGCbZct"
-   },
-   "source": [
-    "## 4.2. Scaling the car data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "id": "sM91zqq9bZcu",
-    "outputId": "d02632ef-395a-4ec3-8f2a-8c351cdfc66d"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1.06728963,  0.58628083,  0.59700163, ...,  0.8741316 ,\n",
-       "        -0.66810724,  0.86509951],\n",
-       "       [-0.89957934,  0.31002285,  0.52449131, ...,  0.82647335,\n",
-       "        -0.76429545,  0.81725991],\n",
-       "       [-0.79575869, -0.20565872,  0.52449131, ...,  0.68349863,\n",
-       "        -0.89655423,  0.67374109],\n",
-       "       ...,\n",
-       "       [-0.55617256, -0.92392947,  0.01691907, ...,  0.77881511,\n",
-       "        -1.13702474,  0.7694203 ],\n",
-       "       [-0.69992424, -1.12651866, -0.20061188, ...,  0.77881511,\n",
-       "        -1.55784814,  0.7694203 ],\n",
-       "       [-0.88360693, -0.83184348,  0.16193971, ...,  0.77881511,\n",
-       "        -1.54582461,  0.7215807 ]])"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "car_scaler = StandardScaler()\n",
-    "car_features_scaled = car_scaler.fit_transform(car_features)\n",
-    "car_features_scaled"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "LW2l7-cLXHPc"
    },
    "source": [
-    "# 5. Dividing train and test data\n",
+    "# 4. Dividing train and test data\n",
     "\n",
     "Also, to evaluate the accuracy of the classifiers in the dataset we will split the data in two sets. Train and Test data. \n",
     "Each set will have the same number of samples of each class (15)."
@@ -3595,7 +3485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {
     "id": "X79m8PxxbZc4"
    },
@@ -3619,7 +3509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "metadata": {
     "id": "4O78vhaWbZc7"
    },
@@ -3638,50 +3528,19 @@
     "id": "oYigzA_wbZc9"
    },
    "source": [
-    "## 5.1. Dividing the plane data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "VNulN2yJbZc-"
-   },
-   "source": [
-    "### Not scaled data"
+    "## 4.1. Dividing the plane data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "metadata": {
     "id": "1TY_e_rNbZc-"
    },
    "outputs": [],
    "source": [
     "plane_train_features, plane_test_features = train_test_features(plane_features)\n",
-    "\n",
     "plane_train_target, plane_test_target = train_test_features(plane_target)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "p1-oLrOebZdC"
-   },
-   "source": [
-    "### Scaled data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "id": "_C9C7cfhbZdD",
-    "outputId": "d2d93abb-d49b-4698-af29-3adf2920a5bb"
-   },
-   "outputs": [],
-   "source": [
-    "plane_train_features_scaled, plane_test_features_scaled = train_test_features(plane_features_scaled)"
    ]
   },
   {
@@ -3690,21 +3549,12 @@
     "id": "J_5XfplybZdG"
    },
    "source": [
-    "## 5.2. Dividing the car data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Izf222VhbZdI"
-   },
-   "source": [
-    "### Not scaled data"
+    "## 4.2. Dividing the car data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "metadata": {
     "id": "DsfvnLrwbZdJ"
    },
@@ -3717,21 +3567,106 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "vQnvjpdibZdM"
+    "id": "2Vhx-ZimbZcn"
    },
    "source": [
-    "### Scaled data"
+    "# 5. Scaling the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "XCLx3gYrbZco"
+   },
+   "source": [
+    "## 5.1. Scaling the plane data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 49,
    "metadata": {
-    "id": "ptmPq64QbZdM"
+    "id": "pXLMzowvbZcp",
+    "outputId": "89ab320a-c796-45ea-acbf-7f3846185180"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.73999423, -0.24373978, -0.30372496, ...,  0.0414752 ,\n",
+       "        -0.87300239,  0.0528201 ],\n",
+       "       [ 0.13049222, -0.35786543, -0.62363589, ..., -0.33028419,\n",
+       "         0.5277887 , -0.33576091],\n",
+       "       [-0.42345371, -0.24373978,  0.49605237, ..., -0.48960965,\n",
+       "        -0.55821787, -0.47706309],\n",
+       "       ...,\n",
+       "       [ 2.30670835, -1.09968214,  2.01562929, ..., -2.29529812,\n",
+       "         0.59074561, -2.29632872],\n",
+       "       [ 2.14278557, -1.4705905 , -1.90327961, ..., -0.10014743,\n",
+       "         0.87405167, -0.10614486],\n",
+       "       [ 0.54877792, -0.0725513 ,  0.0961637 , ...,  0.6079657 ,\n",
+       "         0.02413348,  0.61802884]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "car_train_features_scaled, car_test_features_scaled = train_test_features(car_features_scaled)"
+    "plane_scaler = StandardScaler()\n",
+    "plane_scaler = plane_scaler.fit(plane_train_features)\n",
+    "plane_train_features_scaled = plane_scaler.transform(plane_train_features)\n",
+    "plane_test_features_scaled = plane_scaler.transform(plane_test_features)\n",
+    "plane_train_features_scaled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "ow5x3uGCbZct"
+   },
+   "source": [
+    "## 5.2. Scaling the car data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "id": "sM91zqq9bZcu",
+    "outputId": "d02632ef-395a-4ec3-8f2a-8c351cdfc66d"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.03401769,  0.63862483,  0.65780993, ...,  0.88122895,\n",
+       "        -0.64015655,  0.87599671],\n",
+       "       [-0.75473846, -0.16471601,  0.58205447, ...,  0.67629199,\n",
+       "        -0.8871205 ,  0.67008171],\n",
+       "       [-0.93544855, -0.65045698,  0.58205447, ...,  0.88122895,\n",
+       "        -1.47203511,  0.92747546],\n",
+       "       ...,\n",
+       "       [-0.55760017,  0.73203656,  0.12752169, ...,  0.72752623,\n",
+       "        -0.14622865,  0.72156046],\n",
+       "       [-0.63974112, -0.61309229,  0.58205447, ...,  0.62505775,\n",
+       "        -0.8871205 ,  0.61860296],\n",
+       "       [-0.65616931, -1.09883327, -0.17550015, ...,  0.77876047,\n",
+       "        -1.60201613,  0.77303921]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car_scaler = StandardScaler()\n",
+    "car_scaler = car_scaler.fit(car_train_features)\n",
+    "car_train_features_scaled = car_scaler.transform(car_train_features)\n",
+    "car_test_features_scaled = car_scaler.transform(car_test_features)\n",
+    "car_train_features_scaled"
    ]
   },
   {
@@ -11926,7 +11861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
